# CuPBoP-AMD

./: .gitignore  AMDGPU_CRNCH.md  CMakeLists.txt  CONTRIBUTING.md  README.md  crnchHelpCommands
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: desktop-lite-debian.sh  network.xml  register-llvm.sh  vagrant-libvirt.xml
benchmarks/: README.md
benchmarks/boilerplate/: Makefile  README.md  run.sh
benchmarks/rodinia/: download-data.sh
benchmarks/rodinia/b+tree/: Makefile  common.h  main.cu  output.txt  run.sh
benchmarks/rodinia/b+tree21/: Makefile  main.cu  output.txt  run.sh
benchmarks/rodinia/backprop/: Makefile  backprop.cu  backprop.h  backprop_cuda.cu  backprop_cuda_kernel.cuh  facetrain.cu  imagenet.cu  run.sh
benchmarks/rodinia/bfs/: Makefile  bfs.cu  kernel.cuh  kernel2.cuh  run.sh
benchmarks/rodinia/cfd/: Makefile  euler3d.cu  euler3d_double.cu  exception.h  helper_cuda.h  helper_string.h  helper_timer.h  pre_euler3d.cu  pre_euler3d_double.cu  run.sh
benchmarks/rodinia/dwt2d/: Makefile  common.h  components.cu  dwt.cu  main.cu  run.sh
benchmarks/rodinia/gaussian/: Makefile  gaussian.cu  run.sh
benchmarks/rodinia/heartwall/: Makefile  define.cuh  kernel.cuh  main.cu  run.sh
benchmarks/rodinia/hotspot/: Makefile  hotspot.cu  run.sh
benchmarks/rodinia/hotspot3D/: 3D.cu  3D.hipify.cpp  Makefile  hotspot3D.cupbop  hotspot3D.hipify  run.sh
benchmarks/rodinia/huffman/: Makefile  comparison_helpers.h  cpuencode.cpp  cuda_helpers.h  hipify_polyfill.h  hist.cu  huffman_main.cu  load_data.h  pabio_kernels_v2.cuh  pack_kernels.cuh  parameters.h  print_helpers.h  run.sh  scanLargeArray_kernel.cuh  stats_logger.cpp  stats_logger.h  stdafx.h  testdatagen.h  vlc_kernel_sm64huff.cuh
benchmarks/rodinia/hybridsort/: Makefile  bucketsort.cu  bucketsort_kernel.cu  histogram1024_kernel.cu  histogram1024_kernel.h  main.cu  mergesort.cu  mergesort.h  mergesort_kernel.cu  run.sh
benchmarks/rodinia/kmeans/: Makefile  cluster.bc  cluster.c  cluster.ii  cluster.s  empty-cuda-nvptx64-nvidia-cuda-sm_35.bc.translated.s  empty-hip-amdgcn-amd-amdhsa-gfx90a.out  empty-host-x86_64-unknown-linux-gnu-test.s  empty.cpp-hip-amdgcn-amd-amdhsa.hipfb  kmeans.bc  kmeans.c  kmeans.ii  kmeans.s  kmeans_clustering.bc  kmeans_clustering.c  kmeans_clustering.ii  kmeans_clustering.s  kmeans_cuda-cuda-nvptx64-nvidia-cuda-sm_35.bc  kmeans_cuda-cuda-nvptx64-nvidia-cuda-sm_35.bc.translated_test.bc  kmeans_cuda-cuda-nvptx64-nvidia-cuda-sm_35.cubin  kmeans_cuda-cuda-nvptx64-nvidia-cuda-sm_35.cui  kmeans_cuda-cuda-nvptx64-nvidia-cuda-sm_35.s  kmeans_cuda-host-x86_64-unknown-linux-gnu.bc  kmeans_cuda-host-x86_64-unknown-linux-gnu.bc.translated_test.bc  kmeans_cuda-host-x86_64-unknown-linux-gnu.bc.translated_test.ll  kmeans_cuda-host-x86_64-unknown-linux-gnu.cui  kmeans_cuda-host-x86_64-unknown-linux-gnu.s  kmeans_cuda.cu  kmeans_cuda.cu-cuda-nvptx64-nvidia-cuda.fatbin  kmeans_link.bc  omp.h  (+6 more)
bitcode/: atomic.ll  cuda2gcn.ll  cudaamd-gridblock-size.ll  cudaamd-math.ll  cudaamd-type-convs.ll  ockl.ll  reqd-work-group-size.ll  textureFloat1DReadMode.ll  textureFloat4_1DReadMode.ll  textureInt2DReadMode.ll  vectorMake.ll
cmake/: CuPBoPDoxygen.cmake  GenerateBitcode.cmake  ROCmDependencies.cmake
compilation/: CMakeLists.txt  HostTranslation.cpp  KernelTranslation.cpp
compilation/host/: CMakeLists.txt
compilation/host/include/: cupbop_amd.hpp  fatbin_convert.hpp
compilation/host/src/: fatbin_convert.cpp
compilation/include/: cupbop_amd.hpp  generate_amdgpu_format.hpp  kernel_translator.hpp  utils.hpp
compilation/kernel/: CMakeLists.txt  init_amdgpu.cpp  kernel_translator.cpp  utils.cpp
compilation/kernel/include/: AddressSpaceCastPass.hpp  CUDA2AMDKernelFormatPass.hpp  CUDA2AMDModuleFormatPass.hpp  ChangeAtomics.hpp  CooperativeGroupsPass.hpp  DeviceTrapPass.hpp  DeviceVectorArgPass.hpp  DeviceVectorPass.hpp  GridBlockPass.hpp  KernelArgAddressSpacePass.hpp  MathFnPass.hpp  SharedMemory.hpp  Syncthreads.hpp  TextureTransformPass.hpp  TransformTexture.hpp  TransformVPrintfPass.hpp  VectorAggregateTypeConv.hpp  convert_address_space.hpp  convert_grid_block.hpp  cupbop_amd.hpp  generate_amdgpu_format.hpp  init_amdgpu.hpp  transform_vprintf.hpp  utils.hpp  vectorTypes.hpp
compilation/kernel/src/: AddressSpaceCastPass.cpp  CUDA2AMDKernelFormatPass.cpp  CUDA2AMDModuleFormatPass.cpp  ChangeAtomics.cpp  CooperativeGroupsPass.cpp  DeviceTrapPass.cpp  DeviceVectorArgPass.cpp  DeviceVectorPass.cpp  GridBlockPass.cpp  KernelArgAddressSpacePass.cpp  MathFnPass.cpp  SharedAndConstantMemory.cpp  SharedMemory.cpp  Syncthreads.cpp  TextureTransformPass.cpp  TransformTexture.cpp  TransformVPrintfPass.cpp  VectorAggregateTypeConv.cpp  convert_address_space.cpp  convert_grid_block.cpp  cxxflit.cpp  generate_amdgpu_format.cpp  init_amdgpu.cpp  transform_vprintf.cpp  utils.cpp
device-libs/: CMakeLists.txt
device-libs/include/: cooperative_groups.h  cupbop_cooperative_groups.h  dispatch.h  macros.h
device-libs/prepare-builtins/: CMakeLists.txt
device-libs/src/: cooperative_groups.cl  synchronization.cl  wavefront.cl
docs/: Doxyfile.in  benchmarks.md
include/: kernel_translator.hpp
newbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
newbuild/compilation/: Makefile  cmake_install.cmake
newbuild/runtime/: Makefile
patches/: disable-opt-legacy-pass-mgr-enforce.patch  enable-cuda2gcn.patch  enable-cuda2gcn.stg-open.patch  hipamd-hip_intercept-bugfix.patch
runtime/: CMakeLists.txt
runtime/include/: cudaamd.h
runtime/src/: cudaRuntimeImpl.cpp
samples/emptyKernel/: main.bc  main.cpp  main.ii  main.s  run.sh  test
samples/printf/: main.cu  run.sh
samples/workgroup-sync/: main.cu  run.sh
scripts/: amdcuda  build-rocm.sh  hipify-perl
src/: CMakeLists.txt
src/kernel/: CMakeLists.txt
testing/: HipParse.cpp  vectorconvert.cpp
testing/vector-add/: Makefile  vecadd.cu  vecadd.cu.device.ll  vecadd.cu.device.ll.translated.bc  vecadd.cu.device.ll.translated.ll  vecadd.cu.host.ll  vecadd.hip  vecadd.hip.device.ll  vecadd.hip.host.bc  vecadd.hip.host.ll
(+319 files in other folders)
