file(GLOB RUNTIME_SOURCES "./src/*.cpp")
add_library(cudaonamd SHARED ${RUNTIME_SOURCES})
configure_target_linking_rocm(cudaonamd)
target_include_directories(cudaonamd PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_directories(cudaonamd PRIVATE hsa-runtime64)
cupbop_document_sources(NAME cupbop-amd-runtime DIRS src include)
